install_data(
    meson.project_name() + '.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data(
    meson.project_name() + '.appdata.xml',
    install_dir: join_paths(get_option('datadir'), 'metainfo')
)

install_data(
    join_paths('schemes', 'thiefmd.xml'),
    install_dir: join_paths(get_option('datadir'), 'gtksourceview-3.0', 'styles')
)

install_data(
    join_paths('schemes', 'thiefmd-dark.xml'),
    install_dir: join_paths(get_option('datadir'), 'gtksourceview-3.0', 'styles')
)

install_data(
    join_paths('font', 'iAWriterDuospace-Regular.ttf'),
    install_dir: join_paths(get_option('datadir'), 'fonts', 'truetype', 'quilt')
)
